--- a/assets/stylesheets/internal/_sass/_modal.scss
+++ b/assets/stylesheets/internal/_sass/_modal.scss
@@ -175,7 +175,7 @@
         margin-bottom: 1em;
         text-align: center;
         color: rgba(white, 1);
-        border-radius: $user_avatar_size;
+        border-radius: 4px;
 
         @include size(100%, auto);
 
