--- a/assets/stylesheets/internal/_sass/style.scss
+++ b/assets/stylesheets/internal/_sass/style.scss
@@ -57,12 +57,15 @@ body {
 #user-info {
 
   float: right;
+  color: white;
   display: none;
+  min-width: 180px;
   position: relative;
-
   background: #2a343c;
-  border-radius: $user_avatar_size;
+  border-radius: 4px;
   padding: 0px $user_avatar_size/2 0px 0px;
+
+  @include size(auto, 40px);
 
   @media(max-width: $mobile_break) {
 
@@ -91,7 +94,6 @@ body {
   #user-name {
 
     float: left;
-    color: white;
     position: relative;
     display: inline-block;
     line-height: $user_avatar_size;
@@ -100,7 +102,7 @@ body {
 
   #user-avatar {
 
-    border-radius: 100%;
+    border-radius: 4px;
     display: inline-block;
     margin: 5px 12px 5px 5px;
     background: rgba(black, 0.25);
@@ -128,6 +130,49 @@ body {
 
   }
 
+  .fa {
+
+    float: right;
+    margin-left: 1em;
+    line-height: 40px;
+    display: inline-block;
+
+  }
+
+  #user-menu {
+
+    left: 0px;
+    top: 100%;
+    z-index: -99999;
+    min-height: 200px;
+    position: absolute;
+    visibility: hidden;
+    background: lighten(#2a343c, 5%);
+    border-bottom-left-radius:  4px;
+    border-bottom-right-radius: 4px;
+
+    @include opacity(0);
+    @include size(100%, auto);
+    @include transition(all, 0.265s, ease, 0s);
+
+  }
+
+  &:hover {
+
+    border-bottom-left-radius:  0px;
+    border-bottom-right-radius: 0px;
+
+    #user-menu {
+
+      z-index: 1;
+      visibility: visible;
+
+      @include opacity(1);
+
+    }
+
+  }
+
 }
 
 #site-login {
@@ -139,10 +184,10 @@ body {
   overflow: hidden;
   position: relative;
   background: $social_google;
-  border-radius: $user_avatar_size;
+  border-radius: 4px;
   padding: 0px $user_avatar_size/2 0px 0px;
 
-  @include size(auto, 100%);
+  @include size(auto, 40px);
 
   &:hover,
   &:focus {
@@ -188,7 +233,7 @@ body {
       line-height: 32px;
       font-size: 1.25em;
       text-align: center;
-      border-radius: 100%;
+      border-radius: 4px;
       display: inline-block;
       margin: 5px 12px 5px 5px;
       background: rgba(black, 0.25);
