--- a/assets/stylesheets/internal/compiled/style.css
+++ b/assets/stylesheets/internal/compiled/style.css
@@ -350,7 +350,7 @@ table {
       position: relative;
       display: inline-block;
       width: auto;
-      height: 100%; }
+      height: 40px; }
       @media (max-width: 600px) {
         #page-header #header-container #search-form {
           display: none; } }
@@ -523,7 +523,7 @@ aside {
         cursor: pointer;
         position: relative;
         color: rgba(255, 255, 255, 0.35);
-        border-radius: 5px;
+        border-radius: 4px;
         width: 100%;
         height: auto; }
         aside nav#tag-nav .tag-selector label {
@@ -796,6 +796,7 @@ aside {
           overflow: hidden;
           position: relative;
           padding-bottom: 54%;
+          border: 1px solid white;
           background-repeat: no-repeat;
           background-position: top center;
           margin: 0px 0px 15px 0px;
@@ -867,7 +868,7 @@ aside {
           width: 100%;
           height: auto; }
           #content #tools-list li .tool .details h2 {
-            color: #444;
+            color: #222;
             font-size: 1em;
             font-weight: 600;
             width: 100%;
@@ -880,7 +881,7 @@ aside {
               color: #444;
               text-decoration: none; }
           #content #tools-list li .tool .details p {
-            color: #999;
+            color: #666;
             font-size: 11px;
             margin-top: 7px;
             max-height: 32px;
@@ -1009,6 +1010,13 @@ aside {
                 color: #5d923a; }
       #content #tools-list li.hidden {
         display: none; }
+  #content #fourohfour {
+    z-index: -1;
+    padding: 1em;
+    display: none;
+    position: relative;
+    width: 100%;
+    height: auto; }
 
 #tool-info {
   right: 0px;
@@ -1044,9 +1052,9 @@ footer {
       padding-left: 0px; } }
   footer #footer-content {
     float: left;
-    padding: 2em;
     position: relative;
     display: inline-block;
+    padding: 1.5em 2em 2em 2em;
     width: 100%;
     height: auto; }
     footer #footer-content #footer-social {
@@ -1057,10 +1065,13 @@ footer {
       @media (max-width: 600px) {
         footer #footer-content #footer-social {
           margin-bottom: 2em; } }
+    footer #footer-content #github-btn,
     footer #footer-content #flattr-btn {
       float: left;
-      margin-right: 2em;
+      margin-right: 2px;
       display: inline-block; }
+    footer #footer-content #github-btn {
+      max-width: 80px; }
     footer #footer-content .addthis_toolbox a {
       margin-bottom: 0px !important; }
     footer #footer-content p {
@@ -1216,7 +1227,7 @@ footer {
       margin-bottom: 1em;
       text-align: center;
       color: white;
-      border-radius: 40px;
+      border-radius: 4px;
       width: 100%;
       height: auto; }
       #modal-container modal.modal-window .modal-content .auth-button:last-child {
@@ -1267,11 +1278,15 @@ body {
 
 #user-info {
   float: right;
+  color: white;
   display: none;
+  min-width: 180px;
   position: relative;
   background: #2a343c;
-  border-radius: 40px;
-  padding: 0px 20px 0px 0px; }
+  border-radius: 4px;
+  padding: 0px 20px 0px 0px;
+  width: auto;
+  height: 40px; }
   @media (max-width: 600px) {
     #user-info {
       float: left;
@@ -1286,12 +1301,11 @@ body {
   #user-info #user-avatar,
   #user-info #user-name {
     float: left;
-    color: white;
     position: relative;
     display: inline-block;
     line-height: 40px; }
   #user-info #user-avatar {
-    border-radius: 100%;
+    border-radius: 4px;
     display: inline-block;
     margin: 5px 12px 5px 5px;
     background: rgba(0, 0, 0, 0.25);
@@ -1306,6 +1320,37 @@ body {
     @media (max-width: 600px) {
       #user-info #user-name {
         display: none; } }
+  #user-info .fa {
+    float: right;
+    margin-left: 1em;
+    line-height: 40px;
+    display: inline-block; }
+  #user-info #user-menu {
+    left: 0px;
+    top: 100%;
+    z-index: -99999;
+    min-height: 200px;
+    position: absolute;
+    visibility: hidden;
+    background: #35414b;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    opacity: 0;
+    filter: alpha(opacity=0);
+    width: 100%;
+    height: auto;
+    -webkit-transition: all 0.265s ease 0s;
+    -moz-transition: all 0.265s ease 0s;
+    -ms-transition: all 0.265s ease 0s;
+    transition: all 0.265s ease 0s; }
+  #user-info:hover {
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px; }
+    #user-info:hover #user-menu {
+      z-index: 1;
+      visibility: visible;
+      opacity: 1;
+      filter: alpha(opacity=100); }
 
 #site-login {
   border: 0px;
@@ -1315,10 +1360,10 @@ body {
   overflow: hidden;
   position: relative;
   background: #4285f4;
-  border-radius: 40px;
+  border-radius: 4px;
   padding: 0px 20px 0px 0px;
   width: auto;
-  height: 100%; }
+  height: 40px; }
   #site-login:hover, #site-login:focus {
     background: #5a95f5; }
   @media (max-width: 600px) {
@@ -1345,7 +1390,7 @@ body {
       line-height: 32px;
       font-size: 1.25em;
       text-align: center;
-      border-radius: 100%;
+      border-radius: 4px;
       display: inline-block;
       margin: 5px 12px 5px 5px;
       background: rgba(0, 0, 0, 0.25);
