--- a/assets/stylesheets/internal/_sass/style.scss
+++ b/assets/stylesheets/internal/_sass/style.scss
@@ -59,7 +59,6 @@ body {
   float: right;
   color: white;
   display: none;
-  min-width: 180px;
   position: relative;
   background: #2a343c;
   border-radius: 4px;
@@ -144,7 +143,6 @@ body {
     left: 0px;
     top: 100%;
     z-index: -99999;
-    min-height: 200px;
     position: absolute;
     visibility: hidden;
     background: lighten(#2a343c, 5%);
@@ -154,6 +152,18 @@ body {
     @include opacity(0);
     @include size(100%, auto);
     @include transition(all, 0.265s, ease, 0s);
+
+    li {
+
+      clear: both;
+      float: left;
+      padding: 1em;
+      border-top: 1px solid rgba(white, 0.05);
+      display: inline-block;
+
+      @include size(100%, auto);
+
+    }
 
   }
 
