--- a/assets/stylesheets/internal/_sass/_header.scss
+++ b/assets/stylesheets/internal/_sass/_header.scss
@@ -52,6 +52,7 @@
     top:  0px;
     left: 0px;
     position: absolute;
+    text-align: center;
     padding: 1.35em 2em 1.5em 2em;
     background-color: rgba(0,0,0,0.25);
 
@@ -60,6 +61,15 @@
     @media(max-width: $mobile_break) {
 
       @include size(100%);
+
+    }
+
+    h1, h2 {
+      
+      clear: both;
+      float: left;
+
+      @include size(100%, auto);
 
     }
 
@@ -90,10 +100,10 @@
     h2 {
 
       color: #858585;
-      font-size: 9px;
+      font-size: 0.68em;
       font-weight: 300;
       margin-top: 3px;
-      letter-spacing: 0.55px;
+      letter-spacing: 0.062em;
       text-transform: uppercase;
 
       @media(max-width: $mobile_break) {
