added new learning category

--- a/assets/stylesheets/internal/_sass/_colors.scss
+++ b/assets/stylesheets/internal/_sass/_colors.scss
@@ -10,7 +10,7 @@ $category_marketing: #FF6B6B;
 $category_analytics: #7B904B;
 $category_productivity: #774C60;
 $category_webhosting: #2F99E7;
-$category_misc: #E7B03D;
+$category_learning: #E7B03D;
 
 $logo_background: #f8faff;
 
